update, svm en lr uitleg

--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -2543,11 +2543,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Met logistic regression kun je de kans van een binair resultaat, dus bijvoorbeeld waar of niet waar, bepalen op basis van één of meer voorspellende variabelen met behulp van een logistische functie, dus in dit geval bepaald het model of iemand wel of geen hartinfarct krijgt.\n",
-    " \n",
-    "Als eerste moet je de data splitsen in train en test sets, daarna moet je LogisticRegression activeren en bepalen welke hyperparameters je wilt en wat de waardes zijn, dit kun je gemakkelijk doen met gridsearch, gridsearch bepaalt wat de beste waarde is uit de gegeven waardes voor elke opgegeven parameter, wanneer dat gedaan is moet je het model fitten op de train set, daarna moet je een predict label maken met samples uit X, als laatste moet je het model beoordelen door een bepaalde metric te gebruiken, hier worden samples uit y vergeleken met de predict label, oftewel het model vergelijkt de werkelijke waardes met de voorspelde waardes.    \n",
+    "Bij Logistic Regression wordt er gebruik gemaakt van de verschillende features om een class te voorspellen. Net zoals bij Lineaire Regressie wordt er aan de hand van een standaard functie (z=w1​⋅x1​+w2​⋅x2​+b etc.) een voorspelling gedaan. Deze z-waarde kan heel erg variëren van een klein tot groot getal. Doordat je hiermee lastig een class kan voorspellen wordt het met behulp van de sigmoid functie omgezet in een getal tussen de 0 en 1. Als de z-waarde hoog is, zal het getal dat uit de sigmoid functie komt richting de 1 gaan en als de z-waarde laag is richting de 0 gaan. \n",
+    "Certainly! Here’s the sigmoid function written purely in Markdown:\n",
     "\n",
-    "Ibm. (2024, October 3). Logistic Regression. What Is Logistic Regression? https://www.ibm.com/topics/logistic-regression"
+    "\n",
+    "$$sigma(x) = \\frac{1}{1 + e^{-x}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Het getal dat uit de sigmoid functie komt is als volgt te interpreteren:\n",
+    "-Als het groter is dan 0.5 wordt er \"1\" als class voorspelt.\n",
+    "-Als het kleiner is dan 0.5 wordt er \"0\" als class voorspelt.\n",
+    "\n",
+    "Kort samengevat wordt er dus een lineaire vergelijking gebruikt om een getal te berekenen en wordt de sigmoidfunctie gebruikt om het om te zetten naar een bepaalde kans (tussen 0 en 1) voor classificatie. \n",
+    "\n",
+    "GeeksforGeeks. (2024, June 20). Logistic regression in machine learning. GeeksforGeeks. https://www.geeksforgeeks.org/understanding-logistic-regression/\n",
+    "\n",
+    "\n",
+    "Banoula, M. (2024, August 30). An Introduction to logistic regression in Machine learning. Simplilearn.com. https://www.simplilearn.com/tutorials/machine-learning-tutorial/logistic-regression-in-python"
    ]
   },
   {
@@ -2592,19 +2608,18 @@
    "source": [
     "Gradient descent is een optimalisatie-algoritme dat wordt gebruikt om de parameters van een model te minimaliseren, zoals in logistische regressie. Het werkt door iteratief de waarden van de parameters bij te werken in de richting van de negatieve gradient van de verliesfunctie.\n",
     " \n",
-    "Stel dat we een eenvoudige logistische regressie hebben, waarbij we de coëfficiënt 𝑤 willen optimaliseren. De verliesfunctie voor logistische regressie is de log-verliesfunctie:  \n",
-    "![alt text](c668bc33-f629-433f-b364-28afdd494501.jpg)  \n",
-    "De gradient van de verliesfunctie 𝐿(𝑤) geeft de richting aan waarin we de parameters\n",
-    "𝑤\n",
-    "w moeten bijwerken om de verliesfunctie te minimaliseren. De gradient is de afgeleide van de verliesfunctie ten opzichte van\n",
-    "𝑤:  \n",
-    "![alt text](ff4164ec-ec29-45c2-a1bf-ef84a49c8f51.jpg)  \n",
+    "De loss functie meet de het verschil tussen de werkelijke y en de voorspelde y op de huidige positie. Zo kan het model de parameters aanpassen en lere om de error te minimaliseren. Het doet dit iteratief langs de steilste helling, tot het punt waar de functie zo dicht bij of nul is.\n",
     "\n",
-    "De update regel voor gradient descent is dit:  \n",
+    "$$L(y, \\hat{y}) = -\\left( y \\cdot \\log(\\hat{y}) + (1 - y) \\cdot \\log(1 - \\hat{y}) \\right)\n",
     "\n",
-    "![alt text](03e5fd84-bd7b-4e21-b2d5-8f8811f070f0.jpg)  \n",
     "\n",
-    "De formule screenshots komen uit chatgpt maar de chat is kwijt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Tokuç, A. A. (2023, May 12). Gradient descent equation in logistic regression. Baeldung.\n",
     "https://www.baeldung.com/cs/gradient-descent-logistic-regression"
@@ -2632,13 +2647,25 @@
     "Formules:\n",
     "- L1:\n",
     " \n",
-    "  ![alt text](a07195d7-3ce7-46a3-b03a-03c4e21f6534.jpg)\n",
-    " \n",
+    "  $$\\lambda \\sum_{j=1}^{n} |w_j|\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  Bij L1 is de totale verliesfunctie: VerliesfunctieL1 = Originele verliesfunctie + R(w)\n",
     "- L2:\n",
     " \n",
-    "  ![alt text](f5e5d1c6-8ab2-4d7f-b621-eb9b8af64894.jpg)\n",
-    " \n",
+    "  $$\\lambda \\sum_{j=1}^{n} w_j^2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "  Bij L2 is de totale verliesfunctie: VerliesfunctieL2 = Originele verliesfunctie + R(w)\n",
     " \n",
     " ChatGPT. (2024, October 13). https://chatgpt.com/share/670c2dac-2944-800c-9186-e82329a4dc99\n"
@@ -2742,7 +2769,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Een SVM werkt door data in kaart te kunnen brengen op in een hogere dimensie. Stel je een grafiek voor waar een lijn doorheen gaat om de classes te bepalen, een svm kan hier extra dimensies aan toevoegen waardoor het bij 1 extra bijvoorbeeld een vlak wordt.\n",
+    "Een SVM werkt door data in kaart te kunnen brengen op in een hogere dimensie. Stel je een grafiek voor waar een lijn doorheen gaat om de classes te bepalen, een svm kan hier extra dimensies aan toevoegen waardoor het bij 1 extra bijvoorbeeld een vlak wordt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kernels zijn functies die overeenkomst tussen datapunten in een hogere dimensie meten, zelfs als de data in een logere dimensie is. Zo kan een svm complexere data classificeren die niet lineair te scheiden zijn.\n",
+    "\n",
+    "Zo hebben we bijvoorbeeld de lineaire kern voor lineair scheidbare data, de polyoomkern voor een gekromde grens en de RBF kern voor complexe grenzen.\n",
+    "\n",
+    "De lineaire kernel is de eenvoudigste kernel en is geschikt voor lineair scheidbare data:\n",
+    "\n",
+    "$$K(x, x') = x \\cdot x'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stel dat \n",
+    "\n",
+    "$$x = [1, 2] en x' = [3, 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dan is:\n",
+    "$$K(x, x') = 1 \\cdot 3 + 2 \\cdot 4 = 3 + 8 = 11\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De polynomiale kernel kan kromme beslissingsgrenzen modelleren en is nuttig bij niet-lineaire scheidingen:\n",
+    "\n",
+    "$$K(x, x') = (x \\cdot x' + c)^d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "waar ( c ) een constante is en ( d ) de graad van de polynoom.\n",
+    "\n",
+    "$$x = [1, 2],  x' = [3, 4] ,  c = 1 ,en (d = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dan is:\n",
+    "\n",
+    "$$K(x, x') = (1 \\cdot 3 + 2 \\cdot 4 + 1)^2 = (3 + 8 + 1)^2 = 12^2 = 144"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De **RBF kernel** is krachtig voor zeer complexe en niet-lineaire patronen. De formule is:\n",
+    "\n",
+    "$$K(x, x') = \\exp\\left(-\\frac{\\|x - x'\\|^2}{2\\sigma^2}\\right)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "waar \n",
+    "\n",
+    "$$ \\|x - x'\\|^2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "de Euclidische afstand tussen ( x ) en ( x') is en sigma de spreiding (standaardafwijking) van de Gaussische functie."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Voorbeeld: Stel \n",
+    "$$ x = [1, 2] ,  x' = [3, 4] , en ( \\sigma = 1 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De Euclidische afstand \n",
+    "$$\\|x - x'\\|\n",
     "\n"
    ]
   },
@@ -2750,11 +2875,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Een kernelfuncties kunnen gebruikt worden om scheidingsgrenzen tussen datapunten te creëren, waarbij het in de oorspronkelijke dimensie niet nodig is.  Door deze datapunten in hogere dimensies te zetten kunnen deze datapunten dus wel lineair gescheiden worden. De kernel trick hierbij is dat deze transformatie niet specifiek uitgevoerd / berekent wordt, maar je de hogere dimensie wel kan gebruiken voor die scheidingslijn. \n",
+    "is:\n",
+    "\n",
+    "$$\\|x - x'\\|^2 = (1 - 3)^2 + (2 - 4)^2 = (-2)^2 + (-2)^2 = 4 + 4 = 8\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De RBF kernel is dan:\n",
+    "\n",
+    "$$K(x, x') = \\exp\\left(-\\frac{8}{2 \\cdot 1^2}\\right) = \\exp(-4) \\approx 0.0183\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hier is de kernel trick een techniek om product tussen data te berekenen in de hogere dimensie zonder ze daarheen te transformeren. In plaats van transformmeren passen we de kernel functie direct toe, dit vereist dan minder geheugen en is sneller. Dit maakt stelt het model in staat om met complexe patronen in data te werken en wiskundig in een eenvoudiger dimensie opereren.\n",
     "\n",
     "Kort samengevat kun je met behulp van kernelfuncties datsets die niet lineair seperabel zijn omzetten in een andere dimensie om deze wel lineair seperabel te maken. \n",
     "\n",
-    "Wilimitis, D. (2021, December 7). The kernel trick in support vector classification - towards data science. Medium. https://towardsdatascience.com/the-kernel-trick-c98cdbcaeb3f"
+    "Wilimitis, D. (2021, December 7). The kernel trick in support vector classification - towards data science. Medium. https://towardsdatascience.com/the-kernel-trick-c98cdbcaeb3f\n",
+    "\n",
+    "\n",
+    "ChatGPT - Kernels and kernel trick. (n.d.). ChatGPT. https://chatgpt.com/share/6723cb59-81c0-8002-b1ce-7630de9a4d1d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "#### c) RBF (Radial Basis Function) of Gaussische kernel\n",
+    "De **RBF kernel** is krachtig voor zeer complexe en niet-lineaire patronen. De formule is:\n",
+    "\\[\n",
+    "K(x, x') = \\exp\\left(-\\frac{\\|x - x'\\|^2}{2\\sigma^2}\\right)\n",
+    "\\]\n",
+    "waar \\( \\|x - x'\\|^2 \\) de Euclidische afstand tussen \\( x \\) en \\( x' \\) is en \\( \\sigma \\) de spreiding (standaardafwijking) van de Gaussische functie.\n",
+    "\n",
+    "*Voorbeeld:* Stel \\( x = [1, 2] \\), \\( x' = [3, 4] \\), en \\( \\sigma = 1 \\). De Euclidische afstand \\( \\|x - x'\\| \\) is:\n",
+    "\\[\n",
+    "\\|x - x'\\|^2 = (1 - 3)^2 + (2 - 4)^2 = (-2)^2 + (-2)^2 = 4 + 4 = 8\n",
+    "\\]\n",
+    "De RBF kernel is dan:\n",
+    "\\[\n",
+    "K(x, x') = \\exp\\left(-\\frac{8}{2 \\cdot 1^2}\\right) = \\exp(-4) \\approx 0.0183\n",
+    "\\]\n",
+    "\n",
+    "### 3. Kernel Trick in Praktijk\n",
+    "Het **kernel-trick** houdt in dat we de data niet daadwerkelijk hoeven te transformeren naar een hoger-dimensionale ruimte. In plaats daarvan gebruiken we alleen de waarde van \\( K(x, x') \\) voor alle paren \\( (x, x') \\) om de beslissingsgrenzen te vinden. Dit maakt het rekenproces veel efficiënter.\n",
+    "\n",
+    "Met deze kernelformules kunnen we patronen detecteren in data die anders niet lineair scheidbaar zouden zijn."
    ]
   },
   {
@@ -3790,7 +3965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
