--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -2505,7 +2505,7 @@
     "Certainly! Here’s the sigmoid function written purely in Markdown:\n",
     "\n",
     "\n",
-    "$$sigma(x) = \\frac{1}{1 + e^{-x}}"
+    "$$sigma(x) = \\frac{1}{1 + e^{-x}}$$"
    ]
   },
   {
@@ -2568,7 +2568,7 @@
     " \n",
     "De loss functie meet de het verschil tussen de werkelijke y en de voorspelde y op de huidige positie. Zo kan het model de parameters aanpassen en lere om de error te minimaliseren. Het doet dit iteratief langs de steilste helling, tot het punt waar de functie zo dicht bij of nul is.\n",
     "\n",
-    "$$L(y, \\hat{y}) = -\\left( y \\cdot \\log(\\hat{y}) + (1 - y) \\cdot \\log(1 - \\hat{y}) \\right)\n",
+    "$$L(y, \\hat{y}) = -\\left( y \\cdot \\log(\\hat{y}) + (1 - y) \\cdot \\log(1 - \\hat{y}) \\right)$$\n",
     "\n",
     "\n",
     "\n"
@@ -2605,7 +2605,7 @@
     "Formules:\n",
     "- L1:\n",
     " \n",
-    "  $$\\lambda \\sum_{j=1}^{n} |w_j|\n",
+    "  $$\\lambda \\sum_{j=1}^{n} |w_j|$$\n",
     "\n",
     "\n"
    ]
@@ -2617,7 +2617,7 @@
     "  Bij L1 is de totale verliesfunctie: VerliesfunctieL1 = Originele verliesfunctie + R(w)\n",
     "- L2:\n",
     " \n",
-    "  $$\\lambda \\sum_{j=1}^{n} w_j^2"
+    "  $$\\lambda \\sum_{j=1}^{n} w_j^2$$"
    ]
   },
   {
@@ -2728,7 +2728,7 @@
     "\n",
     "De lineaire kernel is de eenvoudigste kernel en is geschikt voor lineair scheidbare data:\n",
     "\n",
-    "$$K(x, x') = x \\cdot x'"
+    "$$K(x, x') = x \\cdot x'$$"
    ]
   },
   {
@@ -2737,7 +2737,7 @@
    "source": [
     "Stel dat \n",
     "\n",
-    "$$x = [1, 2] en x' = [3, 4]"
+    "$$x = [1, 2] en x' = [3, 4]$$"
    ]
   },
   {
@@ -2745,7 +2745,7 @@
    "metadata": {},
    "source": [
     "dan is:\n",
-    "$$K(x, x') = 1 \\cdot 3 + 2 \\cdot 4 = 3 + 8 = 11\n"
+    "$$K(x, x') = 1 \\cdot 3 + 2 \\cdot 4 = 3 + 8 = 11$$\n"
    ]
   },
   {
@@ -2754,7 +2754,7 @@
    "source": [
     "De polynomiale kernel kan kromme beslissingsgrenzen modelleren en is nuttig bij niet-lineaire scheidingen:\n",
     "\n",
-    "$$K(x, x') = (x \\cdot x' + c)^d"
+    "$$K(x, x') = (x \\cdot x' + c)^d$$"
    ]
   },
   {
@@ -2763,7 +2763,7 @@
    "source": [
     "waar ( c ) een constante is en ( d ) de graad van de polynoom.\n",
     "\n",
-    "$$x = [1, 2],  x' = [3, 4] ,  c = 1 ,en (d = 2)"
+    "$$x = [1, 2],  x' = [3, 4] ,  c = 1 ,en (d = 2)$$"
    ]
   },
   {
@@ -2772,7 +2772,7 @@
    "source": [
     "Dan is:\n",
     "\n",
-    "$$K(x, x') = (1 \\cdot 3 + 2 \\cdot 4 + 1)^2 = (3 + 8 + 1)^2 = 12^2 = 144"
+    "$$K(x, x') = (1 \\cdot 3 + 2 \\cdot 4 + 1)^2 = (3 + 8 + 1)^2 = 12^2 = 144$$"
    ]
   },
   {
@@ -2781,7 +2781,7 @@
    "source": [
     "De **RBF kernel** is krachtig voor zeer complexe en niet-lineaire patronen. De formule is:\n",
     "\n",
-    "$$K(x, x') = \\exp\\left(-\\frac{\\|x - x'\\|^2}{2\\sigma^2}\\right)"
+    "$$K(x, x') = \\exp\\left(-\\frac{\\|x - x'\\|^2}{2\\sigma^2}\\right)$$"
    ]
   },
   {
@@ -2790,7 +2790,7 @@
    "source": [
     "waar \n",
     "\n",
-    "$$ \\|x - x'\\|^2 "
+    "$$ \\|x - x'\\|^2$$"
    ]
   },
   {
@@ -2805,7 +2805,7 @@
    "metadata": {},
    "source": [
     "Voorbeeld: Stel \n",
-    "$$ x = [1, 2] ,  x' = [3, 4] , en ( \\sigma = 1 )"
+    "$$ x = [1, 2] ,  x' = [3, 4] , en ( \\sigma = 1 )$$"
    ]
   },
   {
@@ -2813,7 +2813,7 @@
    "metadata": {},
    "source": [
     "De Euclidische afstand \n",
-    "$$\\|x - x'\\|\n",
+    "$$\\|x - x'\\|$$\n",
     "\n"
    ]
   },
@@ -2823,7 +2823,7 @@
    "source": [
     "is:\n",
     "\n",
-    "$$\\|x - x'\\|^2 = (1 - 3)^2 + (2 - 4)^2 = (-2)^2 + (-2)^2 = 4 + 4 = 8\n",
+    "$$\\|x - x'\\|^2 = (1 - 3)^2 + (2 - 4)^2 = (-2)^2 + (-2)^2 = 4 + 4 = 8$$\n",
     "\n"
    ]
   },
@@ -2833,7 +2833,7 @@
    "source": [
     "De RBF kernel is dan:\n",
     "\n",
-    "$$K(x, x') = \\exp\\left(-\\frac{8}{2 \\cdot 1^2}\\right) = \\exp(-4) \\approx 0.0183\n"
+    "$$K(x, x') = \\exp\\left(-\\frac{8}{2 \\cdot 1^2}\\right) = \\exp(-4) \\approx 0.0183$$\n"
    ]
   },
   {
@@ -2854,34 +2854,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "#### c) RBF (Radial Basis Function) of Gaussische kernel\n",
-    "De **RBF kernel** is krachtig voor zeer complexe en niet-lineaire patronen. De formule is:\n",
-    "\\[\n",
-    "K(x, x') = \\exp\\left(-\\frac{\\|x - x'\\|^2}{2\\sigma^2}\\right)\n",
-    "\\]\n",
-    "waar \\( \\|x - x'\\|^2 \\) de Euclidische afstand tussen \\( x \\) en \\( x' \\) is en \\( \\sigma \\) de spreiding (standaardafwijking) van de Gaussische functie.\n",
-    "\n",
-    "*Voorbeeld:* Stel \\( x = [1, 2] \\), \\( x' = [3, 4] \\), en \\( \\sigma = 1 \\). De Euclidische afstand \\( \\|x - x'\\| \\) is:\n",
-    "\\[\n",
-    "\\|x - x'\\|^2 = (1 - 3)^2 + (2 - 4)^2 = (-2)^2 + (-2)^2 = 4 + 4 = 8\n",
-    "\\]\n",
-    "De RBF kernel is dan:\n",
-    "\\[\n",
-    "K(x, x') = \\exp\\left(-\\frac{8}{2 \\cdot 1^2}\\right) = \\exp(-4) \\approx 0.0183\n",
-    "\\]\n",
-    "\n",
-    "### 3. Kernel Trick in Praktijk\n",
-    "Het **kernel-trick** houdt in dat we de data niet daadwerkelijk hoeven te transformeren naar een hoger-dimensionale ruimte. In plaats daarvan gebruiken we alleen de waarde van \\( K(x, x') \\) voor alle paren \\( (x, x') \\) om de beslissingsgrenzen te vinden. Dit maakt het rekenproces veel efficiënter.\n",
-    "\n",
-    "Met deze kernelformules kunnen we patronen detecteren in data die anders niet lineair scheidbaar zouden zijn."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3.3.2 De wiskundig formule voor de loss functie en de regularisatie"
    ]
   },
@@ -2889,7 +2861,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\min_{\\mathbf{w}, b, \\xi} \\frac{1}{2} ||\\mathbf{w}||^2 + C \\sum_{i=1}^{n} \\max(0, 1 - y_i f(\\mathbf{x}_i)) \n"
+    "$$\\min_{\\mathbf{w}, b, \\xi} \\frac{1}{2} ||\\mathbf{w}||^2 + C \\sum_{i=1}^{n} \\max(0, 1 - y_i f(\\mathbf{x}_i))$$\n"
    ]
   },
   {
@@ -2898,9 +2870,9 @@
    "source": [
     "### Toelichting: \n",
     "1. **L2 Regularisatie** \n",
-    "```math\n",
-    "\\left(\\frac{1}{2} ||\\mathbf{w}||^2\\right)\n",
-    "```\n",
+    "\n",
+    "$$\\left(\\frac{1}{2} ||\\mathbf{w}||^2\\right)$$\n",
+    "\n",
     "   - Dit zorgt voor kleine gewichten, het maximaliseerd de marge tussen de 2 classes. Een kleinere ||w|| betekent een kleinere marge, dit zorgt voor meer generalisatie en minder overfitting.\n",
     "\n",
     "\n",
@@ -2909,9 +2881,9 @@
     "   - Dit zou kunnen leiden to overfitten als het model te goed leert te werken op de trainingdata, dit komt doordat de 'decision boundary' te complex wordt om te generaliseren. In ons geval werkt dit nog vrij goed.\n",
     "\n",
     "3. **Hinge Loss** \n",
-    "```math\n",
-    "\\left(\\max(0, 1 - y_i f(\\mathbf{x}_i))\\right)\n",
-    "```\n",
+    "\n",
+    "$$\\left(\\max(0, 1 - y_i f(\\mathbf{x}_i))\\right)$$\n",
+    "\n",
     "\n",
     "   - De hinge loss zorgt er voor dat de punten die correct geclassificeerd zijn buiten het marge geen loss toevoegen.\n",
     "   - Als een punt binnen de marge of fout geclassificeerd is, groeit de loss exponentieel in proportie met hoe fout die is.\n",
