--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -380,7 +380,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Geen missende waarde\n",
+    "- De 'temp', 'atemp', 'hum' en 'windspeed' zijn al genormaliseerd\n",
+    "- 'date_hour', is geen DateTime data type"
+   ]
   },
   {
    "cell_type": "markdown",
