--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -1193,6 +1193,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AANPASSEN HIERONDER P VALUE\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1829,10 +1838,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Trend toevoegen, deterministic process (kijken of het een lineaire, kwadratische of exponentiele trend is)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2613,7 +2624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2627,7 +2638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
