Opgeschreven welke kolommen we moeten toevoegen

--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -1838,11 +1838,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Trend toevoegen, deterministic process (kijken of het een lineaire, kwadratische of exponentiele trend is)"
+    "# Trend toevoegen (order), deterministic process (kijken of het een lineaire, kwadratische of exponentiele trend is)\n",
+    "# Kijken op kaggle, seizoensperiode toevoegen, Sinus / cosinus toevoegen (week, maand, dag)\n",
+    "\n",
+    "# Naast de algemene timeserie features zijn dit de enige extra features die we moeten toevoegen. Hierna is het vooral modelleren en beste hyperparameters zoeken\n",
+    " "
    ]
   },
   {
