--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -2162,7 +2162,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De optimale orde is 4. Tot en met orde 4 zien we een verbetering in de R²-score. Hoewel de R²-score voor de testset nog steeds negatief is, wat aangeeft dat het model slecht generaliseert, is deze negatieve score voor orde 4 de minst slechte van alle getestte ordes. Dit betekent dat, ondanks dat het model niet goed generaliseert, het model bij orde 4 de beste prestaties levert in vergelijking met andere ordes. Daarom kiezen we voor orde 4 als de optimale keuze."
+    "De optimale orde is 4. Tot en met orde 4 zien we een verbetering in de R²-score. Hoewel de R²-score voor de testset nog steeds negatief is, wat aangeeft dat het model slecht generaliseert, is deze negatieve score voor orde 4 de minst slechte van alle getestte ordes. Dit betekent dat, ondanks dat het model niet goed generaliseert, het model bij orde 4 de beste prestaties levert in vergelijking met andere ordes. Daarom kiezen we voor orde 4 als de optimale keuze.\n",
+    "\n",
+    "DEZE UITLEG AANPASSEN, ORDER 1 GEBRUIKEN"
    ]
   },
   {
@@ -2257,15 +2259,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cyclische representatie voor dag van de week\n",
-    "train['sin_year'] = np.sin(2 * np.pi * train['year'] / 2)\n",
-    "train['cos_year'] = np.cos(2 * np.pi * train['year'] / 2)\n",
-    "\n",
-    "\n",
     "# Cyclische representatie voor uur\n",
     "train['sin_hour_24'] = np.sin(2 * np.pi * train['hour'] / 24)\n",
     "train['cos_hour_24'] = np.cos(2 * np.pi * train['hour'] / 24)\n",
@@ -2345,13 +2342,6 @@
     "models_dict = {'lr': LinearRegression(),\n",
     "               'dt': DecisionTreeRegressor(),\n",
     "               'rf': RandomForestRegressor(max_depth=10, random_state=42, n_jobs=-1)}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TEST SIZE CONTROLEREN, WEET NIET PRECIES HOE DIE MOET"
    ]
   },
   {
@@ -2722,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2735,7 @@
     "model_cv.fit(data.X_train, data.y_train)\n",
     "model_cv.best_params_, model_cv.best_score_\n",
     "\n",
-    "#model_cv.cv_results_"
+    "model_cv.cv_results_"
    ]
   },
   {
@@ -3387,7 +3377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3401,7 +3391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
