--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,9 @@
     "from sklearn.metrics import r2_score\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.model_selection import GridSearchCV, KFold\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from xgboost import XGBRegressor\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
@@ -2775,7 +2778,9 @@
     "models_dict = {\n",
     "               'lr': [ LinearRegression(), {} ],\n",
     "               'dt': [ DecisionTreeRegressor(), {\"max_depth\": [10, 20, 30]} ],\n",
-    "               'rf': [ RandomForestRegressor(random_state=42, n_jobs=-1), {\"max_depth\": [30, 35]} ] \n",
+    "               'rf': [ RandomForestRegressor(random_state=42, n_jobs=-1), {\"max_depth\": [30, 35]} ],\n",
+    "               'knn': [ KNeighborsRegressor(), {} ],\n",
+    "               'xgb': [ XGBRegressor(), {} ],               \n",
     "              }"
    ]
   },
@@ -2904,8 +2909,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Model 1 waar je time series combineert met reguliere feautures (Lineaire regressie)?"
+    "## 5.1 (Lineaire regressie) Model 1 waar je time series combineert met reguliere feautures (Lineaire regressie)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2951,7 +2963,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Model 2 waar je time series combineert met reguliere feautures (Ensemble)?"
+    "## 5.2 (Decision Tree) Model 2 waar je time series combineert met reguliere feautures (Decision Tree)"
    ]
   },
   {
@@ -2998,7 +3010,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.3 Model 3 waar je time series combineert met reguliere feautures?"
+    "## 5.3 (Random Forest) Model 3 waar je time series combineert met reguliere feautures"
    ]
   },
   {
@@ -3045,7 +3057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.4 Model 4 waar je time series combineert met reguliere feautures"
+    "## 5.4 (KNN) Model 4 waar je time series combineert met reguliere feautures"
    ]
   },
   {
@@ -3092,7 +3104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.5 Model 5 waar je time series combineert met reguliere feautures"
+    "## 5.5 (XGBoost) Model 5 waar je time series combineert met reguliere feautures"
    ]
   },
   {
@@ -3139,7 +3151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.6 Model 1 van specifieke tijdseriemodellen (SARIMA(X))"
+    "## 5.6 (SARIMA) Model 1 van specifieke tijdseriemodellen (SARIMA)"
    ]
   },
   {
@@ -3186,7 +3198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.7 Model 2 van specifieke tijdseriemodellen"
+    "## 5.7 (ARIMA) Model 2 van specifieke tijdseriemodellen"
    ]
   },
   {
@@ -3377,7 +3389,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -3391,7 +3403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
