uitleg rf, decisiontree, eda samenvatting

--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -1531,7 +1531,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Er zijn veel inzichten gekomen uit de EDA. Hieronder zullen de belangrijkste kort worden toegelicht:\n",
+    "\n",
+    "- In de visualisaties van toevoegde time series kolommen is te zien dat er duidelijke pieken zijn van verhuuraantallen om 8:00 en 18:00, maar ook dat er op de zondag aanzienlijk minder wordt verhuurd. Daarnaast zijn de aantal in de zomer een stuk hoger vergeleken die in de winter.\n",
+    "\n",
+    "- In de correlatiematrix is naarboven gekomen dat 'temp' en 'atemp' een positieve invloed hebben op het aantal verhuuraantallen, terwijl 'hum' een negatieve correlatie ermee heeft. \n",
+    "\n",
+    "- De boxplots laten zien dat er geen duidelijk verband is tussen 'holiday' en de verhuuraantallen, maar dat er bij slechtere weeersomstandigheden ('weathersit'), wel een aanzienlijk dalende trend is. \n",
+    "\n",
+    "- Kijkend naar de histogrammen bevat de dataset geen rare / extreme outliers waar iets aan gedaan moet worden.\n",
+    "\n",
+    "- Bij het decomposen van de data is het opgevallen dat er een licht stijgende lijn is in de verhuuraantallen over de twee jaar heen. Ook valt het op dat er een (dagelijks) periodiek patroon te zien is. \n",
+    "\n",
+    "- De Fourier-analyse heeft periodieke patronen geïdentificeerd, waarbij jaarlijkse, dagelijkse en de 12-uurlijkse de dominante frequenties waren.\n",
+    "\n",
+    "- De P-value die uit de Dickey-Fuller test komt, toont aan dat de data stationair is, maar kijkend naar de grafieken valt het toch op dat er een duidelijke trend en seasonal component aanwezig was. Om zeker te zijn dat de data stationary is, voordat we gaan modelleren, is dit voor de zekerheid nog gedaan d.m.v. first order differencing."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3225,7 +3241,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**De werking van een decision tree**\n",
+    "\n",
+    "Een decision tree begint met de gehele dataset als input voor de voorspelling. Bij dit model wordt een dataset herhaaldelijk gesplitst in kleinere subsets op basis van 'beslissingsregels' tot het model voldoende specifieke subsets heeft om een duidelijke voorspelling te maken.\n",
+    "\n",
+    "De regressie versie van een decision tree wordt per boom gesplitst op een andere manier dan dat het gebeurt bij een classifier. In plaats van dat er wordt gekeken naar de information gain & gini impurity, wordt er hierbij gebruikt gemaakt van de MSE (Mean Squared Error). Deze metric berekent hoe ver de werkelijke waarden afwijken van de voorspelde waarde (het gemiddelde in een 'leaf' van de tree). De bomen proberen elke splitsing zo te maken dat de voorspeelde waarde zo nauwkeurig mogelijk is. Het model kiest uiteindelijk elke keer de splitsing die de grootste reductie in de variatie (fout) oplevert. \n",
+    "\n",
+    "Deze manier van splitsen wordt herhaald voor elke keer opnieuw gevormde subset met een nieuwe feature (kolom) en splitsingregel. Dit proces gaat door tot er aan een bepaalde stopcriteria wordt voldaan (variatie binnen de groep is niet verder te verminderen of het wordt 'handmatig' gestopt d.m.v. pruning, denk hierbij aan max depth, min samples split etc.)\n",
+    "\n",
+    "Dit is de MSE functie die wordt gebruikt bij het maken van de splitsingen:\n",
+    "\n",
+    "$$\n",
+    "MSE = \\frac{1}{n} \\sum_{i=1}^n (Y_i - \\hat{Y})^2\n",
+    "$$\n",
+    "\n",
+    "Werkelijke waarde\n",
+    "\n",
+    "$$ Y_i $$\n",
+    "\n",
+    "Voorspelde waarde (gemiddelde van de groep)\n",
+    "$$ \\hat{Y} $$\n",
+    "\n",
+    "Aantal gegevenspunten in de groep (samples)\n",
+    "$$ {n} $$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3272,7 +3312,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Random Forest**\n",
+    "\n",
+    "Random forest is gebaseerd op bagging. Bij bagging worden meerdere versies van hetzelfde model getrain op verschillende subets van de dataset, die wordt verkregen door boostrapping. Dit houdt in dat er nieuwe datasets worden gecreëerd door samples uit de oorspronkelijke dataset te trekken met \"terugleggen\" (dezelfde datapunten kunnen meerdere keren worden geselecteerd), genaamd bootstrap samples. \n",
+    "\n",
+    "Daarnaast worden er ook willekeurige features (kolommen) gekozen. Bij elke splitsing van een tree, wordt slechts een willekeurige subset van de beschikbare features overwogen, in plaats van alle features. Het voordeel hiervan is dat de trees minder met elkaar gecorreleerd zijn en onafhankelijkere fouten maken.\n",
+    "\n",
+    "Elke tree van het model voorspelt een continu (numeriek) resultaat, en het uiteindelijke resultaat van de random forest wordt berekend door het gemiddelde van de voorspellingen van alle bomen te nemen. \n",
+    "\n",
+    "Voordelen:  \n",
+    "-Doordat er meerdere modellen naast elkaar worden getrained, kan het overfitting voorkomen.   \n",
+    "-Doordat de trees onafhankelijk van elkaar worden getrained, kunnen ze parallel worden verwerkt. Hierdoor is de trainingstijd dus relatief snel in vergelijking met Gradient Descent Boosting.   \n",
+    "\n",
+    "Nadelen:  \n",
+    "-Ze zijn lastiger te interpreteren dan een losse decision tree.   \n",
+    "-Er zijn veel hyper parameters om te tunen.   \n",
+    "\n",
+    "**Wiskunde**\n",
+    "\n",
+    "Aangezien een random forest het gemiddelde van alle voorspelling van de individuele bomen pakt, moet deze worden berekend. Dit wordt gedaan aan de hand van de onderstaande formule, waarbij K het aantal bomen in de forest is:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}(x) = \\frac{1}{K} \\sum_{k=1}^{K} f_k(x)\n",
+    "$$\n",
+    "\n",
+    "Net zoals bij decision trees wordt er gebruik gemaakt van de MSE metric om te bepalen wat de beste splitsingen zijn:\n",
+    "\n",
+    "$$\n",
+    "MSE = \\frac{1}{n} \\sum_{i=1}^n (Y_i - \\hat{Y})^2\n",
+    "$$\n"
+   ]
   },
   {
    "cell_type": "markdown",
