wiskunde fix xgboost

--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -3443,14 +3443,14 @@
     "\n",
     "XGBoost volgt het principe van Gradient Boosting, waarbij modellen (in dit geval beslisbomen) iteratief worden toegevoegd om fouten te corrigeren die de vorige bomen hebben gemaakt.\n",
     "\n",
-    "•\t**Start**: Het proces begint met een eenvoudige voorspelling, zoals het gemiddelde van de doelvariabele y (voor regressie). Deze voorspelling heet $$F0(x)F_0(x)$$\n",
+    "•\t**Start**: Het proces begint met een eenvoudige voorspelling, zoals het gemiddelde van de doelvariabele y (voor regressie). Deze voorspelling heet $$F_0(x)$$\n",
     "\n",
-    "•\t**Iteratieve verbetering**: In elke volgende stap t, wordt een nieuwe beslisboom getraind om de residuen $$(ri=yi−Ft−1(xi)r_i = y_i - F_{t-1}(x_i))$$ te voorspellen, oftewel de fouten van het vorige model.\n",
+    "•\t**Iteratieve verbetering**: In elke volgende stap t, wordt een nieuwe beslisboom getraind om de residuen $$(r_i = y_i - F_{t-1}(x_i))$$ te voorspellen, oftewel de fouten van het vorige model.\n",
     "\n",
     "\n",
-    "•\t**Update**: De voorspelling wordt aangepast met een fractie van de nieuwe boom $$(η×nieuw model\\eta \\times \\text{nieuw model})$$ waarbij η de learning rate is.\n",
+    "•\t**Update**: De voorspelling wordt aangepast met een fractie van de nieuwe boom $$\\eta \\times \\text{nieuw model}$$ waarbij η de learning rate is.\n",
     "\n",
-    "$$Ft(x)=Ft−1(x)+η⋅ht(x)F_t(x) = F_{t-1}(x) + \\eta \\cdot h_t(x)$$\n",
+    "$$F_t(x) = F_{t-1}(x) + \\eta \\cdot h_t(x)$$\n",
     "\n",
     "Hier is $$h_t(x)$$ de beslisboom die in stap t wordt toegevoegd.\n",
     "________________________________________\n",
