--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -1450,6 +1450,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Algemene uitleg ACF & PACF**\n",
+    "\n",
+    "ACF:\n",
+    "\n",
+    "- Hier wordt gekeken naar de correlatie tussen de huidige lag en alle voorgaande lags ten opzichte van Y. Dit wordt geplot in een grafiek wat ook duidelijk maakt of deze correlaties positief of negatief zijn.\n",
+    "\n",
+    "PACF:\n",
+    "\n",
+    "- Hier wordt enkel gekeken naar de correlatie tussen één eerdere lag ten opzichte van Y. Alle tussenliggende lags hebben dus geen invloed op de PACF.\n",
+    "\n",
+    "\n",
+    "**ACF & PACF op onze dataset**\n",
+    "\n",
+    "ACF:\n",
+    "\n",
+    "- In de grafiek is te zien dat de eerste vijf lags een relatief hoge correlatie hebben met de Y waarde. Dit neemt echt wel af. De dertien lags daarna tonen aan dat ze weer een hele lage correlatie hebben en vervolgens is er in de opvolgende zes lags weer een stijging in de correlatie. \n",
+    "\n",
+    "Dit zou kunnen aantonen dat er iets van een patroon in de data aanwezig is, ondanks het stationairy is.\n",
+    "\n",
+    "PACF\n",
+    "\n",
+    "- Hierin is te zien dat de eerste lag een relatief hoge positieve correlatie heeft met de Y waarde. De tweede lag heeft een iets lager (maar alsnog significante) negatieve correlatie met de Y waarde. Hierna zijn eigenlijk alle correlaties onder de 0.25. Ondanks ze niet in een blauwe \"errorbar\" staan, is er besloten dat we deze niet relevant genoeg vinden om mee te nemen in de time series modellen.\n",
+    "\n",
+    "Bij het gebruiken van de time series modellen zullen er dus twee lags worden meegenomen in de parameters. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
@@ -1485,21 +1515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uit de test komt een p-value van 5.90e-09, wat betekent dat de data stationairy zou moeten zijn. Kijkend naar de plots van de decompose ziet het er alleen niet stationairy uit. Dit komt doordat er een trend / seasonal component te zien is. Daarom wordt hieronder de data voor de zekerheid aangepast (in een nieuwe variable) om het zeker weten stationairy te maken, zodat de bij bepaalde time series modellen gebruik van kan worden gemaakt."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Aan de linkerkant is de orignele 'non-stationairy' dataset te zien en aan de rechterkant de nieuwe 'stationairy' dataset, na het gebruik maken van de first-order differencing techniek. Hieronder zal data nogmaals worden gedecomposed om te controleren of de 'seasonality' ook uit de dataset is gehaald."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In de bovenstaande grafiek is te zien dat zowel de trend als het seasonality component uit de dataset zijn gehaald, wat betekent dat er nu sprake is van een 'stationairy' dataset."
+    "Uit de test komt een p-value van 5.90e-09, wat betekent dat de data stationairy zou moeten zijn. Kijkend naar de plots van de decompose ziet het er alleen niet stationairy uit. Dit komt doordat er een trend / seasonal component te zien is. Dit is raar, dus we weten niet of we het stationairy moeten maken."
    ]
   },
   {
@@ -1527,7 +1543,9 @@
     "\n",
     "- De Fourier-analyse heeft periodieke patronen geïdentificeerd, waarbij jaarlijkse, dagelijkse en de 12-uurlijkse de dominante frequenties waren.\n",
     "\n",
-    "- De P-value die uit de Dickey-Fuller test komt, toont aan dat de data stationair is, maar kijkend naar de grafieken valt het toch op dat er een duidelijke trend en seasonal component aanwezig was. Om zeker te zijn dat de data stationary is, voordat we gaan modelleren, is dit voor de zekerheid nog gedaan d.m.v. first order differencing."
+    "- De P-value die uit de Dickey-Fuller test komt, toont aan dat de data stationair is, maar kijkend naar de grafieken valt het toch op dat er een duidelijke trend en seasonal component aanwezig was. Om zeker te zijn dat de data stationary is, voordat we gaan modelleren, is dit voor de zekerheid nog gedaan d.m.v. first order differencing.\n",
+    "\n",
+    "- Er is een dalende en stijgende lijn in de ACF, wat aan kan tonen dat er toch patronen in de data aanwezig zijn. IN de PACF grafiek is er te zien dat de eerste twee lags de grootste invloed hebben op de Y waarde, waardoor er is besloten om die mee te nemen in de time series modellen."
    ]
   },
   {
@@ -4103,7 +4121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
