--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -3322,8 +3322,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-   Loss Function\n",
-    "-   Regularisatie"
+    "- **Loss Function**\n",
+    "  - Bij lineaire regressie gebruiken we een loss function om te meten hoe goed ons model presteert. De meest gebruikte loss function is de MSE. MSE berekent het gemiddelde van de kwadraten van de verschillen tussen de predicted waarden en de actual waarden. De formule is:\n",
+    "  \n",
+    "    $$\n",
+    "    \\text{MSE} = \\frac{1}{n} \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2\n",
+    "    $$\n",
+    "    \n",
+    "    Waar:\n",
+    "    \n",
+    "    - $y_i$ de werkelijke waarde is,\n",
+    "    - $\\hat{y}_i$ de voorspelde waarde is,\n",
+    "    - $n$ het aantal observaties is.\n",
+    "    \n",
+    "    Het doel is om de MSE te minimaliseren door de optimale waarden voor de coefficienten (parameters) van het model te vinden. Een lagere MSE betekent dat het model beter presteert.\n",
+    "\n",
+    "- **Regularisatie**\n",
+    "  - Regularisatie wordt gebruikt om overfitting te voorkomen door de moeilijkheid van het model terug te dringen. Dit wordt gedaan door een 'penalty' toe te voegen aan de loss function die grote waarden van de coefficienten penaliseert.\n",
+    "  \n",
+    "    - **Lasso (L1 Regularisatie)**\n",
+    "      - Lasso voegt de som van de absolute waarden van de coefficienten toe aan de loss function. De aangepaste loss function wordt:\n",
+    "      \n",
+    "        $$\n",
+    "        \\text{Loss} = \\text{MSE} + \\lambda \\sum_{j=1}^{p} |w_j|\n",
+    "        $$\n",
+    "        \n",
+    "        Waar:\n",
+    "        \n",
+    "        - $\\lambda$ de regularisatieparameter is die bepaalt hoeveel 'penalty' er wordt toegevoegd,\n",
+    "        - $w_j$ de $j$-de coefficient is,\n",
+    "        - $p$ het aantal features is.\n",
+    "        \n",
+    "        L1 kan coefficienten precies op nul zetten, wat helpt bij feature selectie door onbelangrijke features te verwijderen.\n",
+    "    \n",
+    "    - **Ridge (L2 Regularisatie)**\n",
+    "      - Ridge voegt de som van de kwadraten van de coefficienten toe aan de loss function:\n",
+    "      \n",
+    "        $$\n",
+    "        \\text{Loss} = \\text{MSE} + \\lambda \\sum_{j=1}^{p} w_j^2\n",
+    "        $$\n",
+    "        \n",
+    "        L2 helpt dat de coefficienten klein blijven maar nooit nul worden. Dit helpt om multicollineariteit te verminderen en de stabiliteit van het model te verbeteren.\n",
+    "        \n",
+    "- **Voorbeeld:**\n",
+    "\n",
+    "Stel je hebt data en je wilt een lineair model fitten. Zonder regularisatie minimaliseer je alleen de MSE en kun je overfitting krijgen. Met regularisatie voeg je een pentalty toe om de coefficienten te beperken.\n",
+    "\n",
+    "**Zonder Regularisatie:**\n",
+    "\n",
+    "$$\n",
+    "\\text{MSE} = \\frac{1}{n} \\sum_{i=1}^{n} (y_i - (w x_i + b))^2\n",
+    "$$\n",
+    "\n",
+    "**Met L1 Regularisatie (Lasso):**\n",
+    "\n",
+    "$$\n",
+    "\\text{Loss} = \\text{MSE} + \\lambda \\sum_{j=1}^{p} |w_j|\n",
+    "$$\n",
+    "\n",
+    "**Met L2 Regularisatie (Ridge):**\n",
+    "\n",
+    "$$\n",
+    "\\text{Loss} = \\text{MSE} + \\lambda \\sum_{j=1}^{p} w_j^2\n",
+    "$$\n",
+    "\n",
+    "Door de juiste waarde voor $\\lambda$ te kiezen krijg je een balans tussen een complex en simpel model. Een hogere $\\lambda$ betekent meer penalty en dus simpelere modellen, wat kan helpen om overfitting te voorkomen.\n",
+    "\n",
+    "\n",
+    "\n",
+    "​"
    ]
   },
   {
