--- a/opdracht 2/ML_2.ipynb
+++ b/opdracht 2/ML_2.ipynb
@@ -3293,8 +3293,161 @@
     "Door de juiste waarde voor $\\lambda$ te kiezen krijg je een balans tussen een complex en simpel model. Een hogere $\\lambda$ betekent meer penalty en dus simpelere modellen, wat kan helpen om overfitting te voorkomen.\n",
     "\n",
     "\n",
+    "- GeeksforGeeks. (2024, 18 september). Ridge Regression vs Lasso Regression. GeeksforGeeks. https://www.geeksforgeeks.org/ridge-regression-vs-lasso-regression/\n",
+    "- LogisticRegression. (z.d.). Scikit-learn. https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
+    "- Nagpal, A. (2024, 3 oktober). L1 and L2 Regularization Methods, Explained. Built In. https://builtin.com/data-science/l2-regularization\n",
+    "- Megha. (2024, 10 januari). Log Loss vs. Mean Squared Error: Choosing the Right Metric for Classification. Analytics Vidhya. https://www.analyticsvidhya.com/blog/2020/11/binary-cross-entropy-aka-log-loss-the-cost-function-used-in-logistic-regression/\n",
     "\n",
     "​"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**voorbeeld met behulp van ChatGPT**\n",
+    "\n",
+    "**Voorbeeld van L1 en L2 Regularisatie met Getallen in Logistic Regression**\n",
+    "\n",
+    "Laten we een eenvoudig voorbeeld bekijken van hoe L1 (Lasso) en L2 (Ridge) regularisatie werken in het kader van logistic regression.\n",
+    "\n",
+    "**Dataset:**\n",
+    "\n",
+    "We hebben een kleine dataset met twee observaties en twee features:\n",
+    "\n",
+    "| i | $x_{i1}$ | $x_{i2}$ | $y_i$ |\n",
+    "|---|----------|----------|-------|\n",
+    "| 1 |    1     |    2     |   1   |\n",
+    "| 2 |    2     |    1     |   0   |\n",
+    "\n",
+    "**Model:**\n",
+    "\n",
+    "We gebruiken een logistic regression model van de vorm:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}_i = \\sigma(z_i) = \\frac{1}{1 + e^{-z_i}}\n",
+    "$$\n",
+    "\n",
+    "waarbij:\n",
+    "\n",
+    "$$\n",
+    "z_i = w_1 x_{i1} + w_2 x_{i2} + b\n",
+    "$$\n",
+    "\n",
+    "We nemen aan dat de gewichten en bias als volgt zijn:\n",
+    "\n",
+    "- $w_1 = 0.5$\n",
+    "- $w_2 = -0.5$\n",
+    "- $b = 0$\n",
+    "\n",
+    "**Stap 1: Bereken de Voorspellingen**\n",
+    "\n",
+    "Voor observatie 1:\n",
+    "\n",
+    "$$\n",
+    "z_1 = (0.5)(1) + (-0.5)(2) + 0 = 0.5 - 1 = -0.5\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}_1 = \\sigma(-0.5) = \\frac{1}{1 + e^{0.5}} \\approx 0.3775\n",
+    "$$\n",
+    "\n",
+    "Voor observatie 2:\n",
+    "\n",
+    "$$\n",
+    "z_2 = (0.5)(2) + (-0.5)(1) + 0 = 1 - 0.5 = 0.5\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}_2 = \\sigma(0.5) = \\frac{1}{1 + e^{-0.5}} \\approx 0.6225\n",
+    "$$\n",
+    "\n",
+    "**Stap 2: Bereken de Logistieke Verliesfunctie (zonder regularisatie)**\n",
+    "\n",
+    "De verliesfunctie voor logistic regression is de binaire cross-entropy:\n",
+    "\n",
+    "$$\n",
+    "\\text{Loss} = -\\frac{1}{n} \\sum_{i=1}^{n} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
+    "$$\n",
+    "\n",
+    "Bereken de verlies voor elke observatie:\n",
+    "\n",
+    "Voor observatie 1 ($y_1 = 1$):\n",
+    "\n",
+    "$$\n",
+    "\\text{Loss}_1 = - \\left[ (1) \\log(0.3775) + (0) \\log(1 - 0.3775) \\right] = - \\log(0.3775) \\approx 0.9741\n",
+    "$$\n",
+    "\n",
+    "Voor observatie 2 ($y_2 = 0$):\n",
+    "\n",
+    "$$\n",
+    "\\text{Loss}_2 = - \\left[ (0) \\log(0.6225) + (1) \\log(1 - 0.6225) \\right] = - \\log(0.3775) \\approx 0.9741\n",
+    "$$\n",
+    "\n",
+    "Totale verlies zonder regularisatie:\n",
+    "\n",
+    "$$\n",
+    "\\text{Total Loss} = \\frac{1}{2} (0.9741 + 0.9741) = 0.9741\n",
+    "$$\n",
+    "\n",
+    "**Stap 3: Bereken de Verliesfunctie met L1 Regularisatie**\n",
+    "\n",
+    "De L1 regularisatie term is:\n",
+    "\n",
+    "$$\n",
+    "\\lambda \\sum_{j=1}^{p} |w_j|\n",
+    "$$\n",
+    "\n",
+    "Stel $\\lambda = 0.1$. Dan is de regularisatieterm:\n",
+    "\n",
+    "$$\n",
+    "\\text{L1 Regularization} = 0.1 (|0.5| + |-0.5|) = 0.1 (0.5 + 0.5) = 0.1 (1) = 0.1\n",
+    "$$\n",
+    "\n",
+    "Totale verlies met L1 regularisatie:\n",
+    "\n",
+    "$$\n",
+    "\\text{Total Loss}_{\\text{L1}} = \\text{Loss} + \\text{L1 Regularization} = 0.9741 + 0.1 = 1.0741\n",
+    "$$\n",
+    "\n",
+    "**Stap 4: Bereken de Verliesfunctie met L2 Regularisatie**\n",
+    "\n",
+    "De L2 regularisatie term is:\n",
+    "\n",
+    "$$\n",
+    "\\lambda \\sum_{j=1}^{p} w_j^2\n",
+    "$$\n",
+    "\n",
+    "Regularisatieterm:\n",
+    "\n",
+    "$$\n",
+    "\\text{L2 Regularization} = 0.1 \\left( (0.5)^2 + (-0.5)^2 \\right) = 0.1 (0.25 + 0.25) = 0.1 (0.5) = 0.05\n",
+    "$$\n",
+    "\n",
+    "Totale verlies met L2 regularisatie:\n",
+    "\n",
+    "$$\n",
+    "\\text{Total Loss}_{\\text{L2}} = \\text{Loss} + \\text{L2 Regularization} = 0.9741 + 0.05 = 1.0241\n",
+    "$$\n",
+    "\n",
+    "**Vergelijking van de Verliezen:**\n",
+    "\n",
+    "- **Zonder regularisatie:** $\\text{Loss} = 0.9741$\n",
+    "- **Met L1 regularisatie:** $\\text{Total Loss}_{\\text{L1}} = 1.0741$\n",
+    "- **Met L2 regularisatie:** $\\text{Total Loss}_{\\text{L2}} = 1.0241$\n",
+    "\n",
+    "**Interpretatie:**\n",
+    "\n",
+    "- **L1 Regularisatie** voegt een grotere penalty toe dan L2 in dit voorbeeld, omdat de som van de absolute waarden van de gewichten groter is dan de som van hun kwadraten.\n",
+    "- **L2 Regularisatie** heeft een kleinere impact op de totale verliesfunctie in dit geval.\n",
+    "\n",
+    "**Effect op de Gewichten:**\n",
+    "\n",
+    "- Bij het minimaliseren van de totale verliesfunctie zullen de extra regularisatietermen ervoor zorgen dat de optimale gewichten worden aangepast om de penalty te verminderen.\n",
+    "- **L1 Regularisatie** kan sommige gewichten naar precies nul trekken, wat leidt tot een sparsity effect en feature selectie.\n",
+    "- **L2 Regularisatie** vermindert de grootte van de gewichten maar maakt ze zelden precies nul, wat helpt om multicollineariteit te verminderen en het model te stabiliseren.\n",
+    "\n",
+    "ChatGPT - L1 en L2 regularisatie. (z.d.). ChatGPT. https://chatgpt.com/share/67489c58-0318-800b-b34d-f399ca37f119"
    ]
   },
   {
